Complete HTML Assignment for internship stdio in web design

--- a/FristHtml.html
+++ b/FristHtml.html
@@ -4,9 +4,116 @@
 		<title>My frist Web in Notepad ++</title>
 	</head>
 	<body>
-	<h1>Rohit Nittawadekar</h1>
-	<p>I'm Web Developer</p>
+	<h1 id="top">How to install notepad ++ in Windows</h1><a href="#download">Follow the Installation rules and map</a>
 	
+	
+<div>
+	<h2> What is Notepad++</h2>
+	
+	<p>         <strong>Notepad++</strong> is a text editor and source code editor for use under Microsoft Windows.
+	It supports around 80 programming languages with syntax highlighting and code folding.
+	It allows working with multiple open files in a single window, thanks to its tabbed editing interface.
+	<strong>Notepad++</strong> is available under GPL and distributed as free software</p>
+	<p><strong>Notepad++</strong>  is a free (as in “free speech” and also as in “free beer”) source code editor and <strong>Notepad++</strong> replacement that supports several languages.
+	Running in the MS Windows environment, its use is governed by GNU General Public License.</p>
+	<p>Based on the powerful editing component Scintilla, <strong>Notepad++</strong>  is written in C++ and uses pure Win32 API and STL
+		which ensures a higher execution speed and smaller program size. By optimizing as many routines as possible without losing user friendliness, <strong>Notepad++</strong>  is trying to reduce the world carbon dioxide emissions.
+	When using less CPU power, the PC can throttle down and reduce power consumption, resulting in a greener environment.</p>
+	
+	<img src="notepad4ever.png" style="width: 800px" alt="Img Not Found">
+</div>
+<hr>
+<div id="download">
+	<h2 >Download Notepad++</h2>
+	<p>Download the latest version of <strong>Notepad++</strong> from
+	<h2><a href=" https://notepad-plus-plus.org/downloads/">Download</a></h2>
+	</p>
+	<p> Choose 32 or 64 bit <strong>Notepad++</strong>  build according to your operating system, then choose the package you want to download.
+	Most users use the installer as it’s the easiest route, however <strong>Notepad++</strong>  is also available in 7z and zip formats. </p>
+</div>
+
+<div>
+<h2>Install Notepad++ using the installer</h2>
+<ol>
+<li>Download the installer </li>
+<li>Run the executable binary and follow the installation flow </li>
+</ol>
+
+
+<table border="1">
+	<thead  >
+		<tr>
+			<td><strong><em>Sr. NO</em></strong>.</td>
+			<td><strong><em>Image</em></strong></td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><strong>A) </strong> Select letest version</td>
+			<td><img src="InstallNotepad-1.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>B) </strong> Choose the 64bits x64 </td>
+			<td><img src="InstallNotepad-2.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>C) </strong> Click Installer. To Download extension, <br>click and install it</td>
+			<td><img src="InstallNotepad-3.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>D) </strong> Select language and Click OK</td>
+			<td><img src="InstallNotepad-4.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>E) </strong> Click next to Continue </td>
+			<td><img src="InstallNotepad-5.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>F) </strong> License agreement are Read and Agree </td>
+			<td><img src="InstallNotepad-6.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>G) </strong> Choose path </td>
+			<td><img src="InstallNotepad-7.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>H) </strong> All component are ae its and Click next </td>
+			<td><img src="InstallNotepad-8.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+		<tr>
+			<td><strong>I) </strong> Start with CODING</td>
+			<td><img src="InstallNotepad-9.png" style="width: 500px; border:1px solid black" alt="Img Not Found"></td>
+		</tr>
+	</tbody>
+</table>
+
+<div>
+<br><br>
+<h3>Instructions Video</h3>
+<ol type="I">
+<li> 
+<strong>English</strong> <br>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TXEyNQDIrwc" title="YouTube video player"
+ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</li>
+<br><br>
+<li>
+<strong>Hindi</strong> <br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pJYYa_b748I" 
+title="YouTube video player" frameborder="0"
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ </li>
+ 
+</ol>
+</div>
+</div> 
+
+	
+	<div>
+	<h3><em>I hope you enjoy <strong>Notepad++</strong>  as much as I enjoy coding it!!!</em> </h3>
+	 <strong><a href="#top">-: Page Up :-</a></strong>
+	 </div>
 	</body>
 
 
