To complete stylling for header and navigation bar

--- a/CSS Assignment/Index.html
+++ b/CSS Assignment/Index.html
@@ -3,11 +3,62 @@
 
 <head>
     <title>CSS Assignment with Responsive webpage</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: Arial;
+        }
+
+        div.header {
+            width: 100%;
+            background-color: pink;
+            padding: 20px;
+            text-align: center;
+            font-weight: bold;
+
+        }
+
+        div.title {
+            width: 100%;
+            text-align: center;
+            background-color: orange;
+            padding: 6rem;
+        }
+
+        div.title h1 {
+            padding-bottom: 2rem;
+            font-size: 40px;
+            cursor: pointer;
+        }
+
+        nav {
+            width: 100%;
+            height: 1.5cm;
+            padding: 0 10px;
+            background-color: gainsboro;
+            display: flex;
+            position: sticky;
+            top: 0;
+
+        }
+
+        nav a {
+            text-decoration: none;
+            padding: 20px ;
+            color: black;
+        }
+        nav a:hover{
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
     <div class="header">
-        <p>This is the CSS Assignment using the various CSS properties along with responsive web design.</p>
+        <h4>This is the CSS Assignment using the various CSS properties along with responsive web design.</h4>
     </div>
     <div class="title">
         <h1>Welcome to Responsive Webpage!</h1>
@@ -29,10 +80,13 @@
                 alt="img not found">
         </div>
 
-        <p>Stay at your desired familiar environment and devour upon the technical and organizational aspects of the corporate. Within your domestic vicinity, work & learn from the professionals and apply the gained skills towards the construction of a Learning-based ecosystem.</p>
+        <p>Stay at your desired familiar environment and devour upon the technical and organizational aspects of the
+            corporate. Within your domestic vicinity, work & learn from the professionals and apply the gained skills
+            towards the construction of a Learning-based ecosystem.</p>
 
         <h2>WebDesign Course</h2>
-        <p>All you need is a good-workable effective-reliable internet connectivity, and the determination to work and become a member of the corporate world.</p>
+        <p>All you need is a good-workable effective-reliable internet connectivity, and the determination to work and
+            become a member of the corporate world.</p>
 
         <div class="animate">
             <h1>Internship Stdio</h1>
@@ -44,13 +98,18 @@
         <address>Starting from, May 25, 2023</address>
 
         <div class="cart-img">
-            <img src="https://css-assignment.majain.repl.co/Assests/web_dev.jpg" style="width: 400px;"
+            <img src="https://css-assignment.majain.repl.co/Assests/webdesign.png" style="width: 400px;"
                 alt="img not found">
         </div>
 
-        <p>Internship training leveraging website designing using HTML, CSS, and JavaScript and BootStrap making you competent to build your own website.
+        <p>Internship training leveraging website designing using HTML, CSS, and JavaScript and BootStrap making you
+            competent to build your own website.
         </p>
-        <p>HTML and CSS are the core building blocks of the internet and make up what you see online every day. Just knowing syntax alone is not enough, you need to know how to put it all together. Our approach is to train you to think like a web designer. This internship is designed to train you to play with modern web design, keeping a sharp focus on real-world everyday web development skills. Understand how to use CSS in a modern approach, learning which properties are most commonly used and why.
+        <p>HTML and CSS are the core building blocks of the internet and make up what you see online every day. Just
+            knowing syntax alone is not enough, you need to know how to put it all together. Our approach is to train
+            you to think like a web designer. This internship is designed to train you to play with modern web design,
+            keeping a sharp focus on real-world everyday web development skills. Understand how to use CSS in a modern
+            approach, learning which properties are most commonly used and why.
         </p>
 
         <h2>Who this Internship is for:</h2>
@@ -58,14 +117,18 @@
 
         <ul>
             <li>Anyone who wants to learn about creating websites.</li>
-            <li>Anyone who wants to develop a step by step understanding of HTML, CSS, JavaScript, and about making a website.</li>
-            <li>Check the details for your live introductory meeting link in your live introductory curriculum session</li>
+            <li>Anyone who wants to develop a step by step understanding of HTML, CSS, JavaScript, and about making a
+                website.</li>
+            <li>Check the details for your live introductory meeting link in your live introductory curriculum session
+            </li>
         </ul>
     </div>
 
     <div class="footer">
         <div class="owner">
-            <a href="#"><h1>@Rohit Nittawadeakr</h1></a>
+            <a href="#">
+                <h1>@Rohit Nittawadeakr</h1>
+            </a>
         </div>
     </div>
 </body>
