--- a/CSS Assignment/Index.html
+++ b/CSS Assignment/Index.html
@@ -46,12 +46,112 @@
 
         nav a {
             text-decoration: none;
-            padding: 20px ;
+            padding: 20px;
             color: black;
         }
-        nav a:hover{
+
+        nav a:hover {
             background-color: black;
             color: white;
+        }
+
+        .container {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+        }
+
+        .container div.side-cart {
+            flex-basis: 1;
+            padding: 15px;
+        }
+
+        .container div.main-cart {
+            flex-basis: 2;
+            padding: 15px;
+        }
+
+        div.side-cart h2,
+        div.side-cart h3 {
+            padding: 10px;
+            word-spacing: 5px;
+            text-transform: capitalize;
+        }
+
+        div.side-cart h4 {
+            width: 100%;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 10px;
+        }
+
+        div.side-cart div.cart-img {
+            width: 100%;
+            background-color: rgb(252, 201, 209);
+            border-radius: 5px;
+            padding: 35px;
+            align-items: center;
+        }
+
+        div.side-cart p {
+            padding: 10px;
+        }
+
+        div.main-animate {
+            width: 100%;
+            height: 5cm;
+            position: relative;
+        }
+
+        div.animate{
+            width: 4cm;
+            height: 2cm;
+            background-color: plum;
+            position: relative;
+            top: 0;
+            left: 0;
+            border-radius: 10px;
+            font-size: 18px;
+            text-align: center;
+            padding-top: 15px;
+            animation-name: animate;
+            /* animation-direction: reverse; */
+            animation-duration: 4s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        div.animate img{
+            width: 80%;
+            height: 80%;
+        }
+
+        @keyframes animate{
+            0%{
+                background-color: orangered;
+                left: 0;
+                top: 0;
+            }
+            25%{
+                background-color: orange;
+                left: 320px;
+                top: 0px;
+            }
+            50%{
+                background-color: yellow;
+                left: 320px;
+                top: 100px;
+            }
+            75%{
+                background-color: yellowgreen;
+                left: 0;
+                top: 100px;
+            }
+            100%{
+                background-color: plum;
+                left: 0;
+                top: 0;
+            }
         }
     </style>
 </head>
@@ -70,64 +170,74 @@
         <a href="#">Contact Us</a>
     </nav>
 
-    <div class="side-cart">
+    <div class="container">
+        <div class="side-cart">
+            <h2>About internship studio</h2>
+            <h4>Photo of Internship Studio:</h4>
 
-        <h2>About Internship Studio</h2>
-        <p>Photo of Internship Studio:</p>
+            <div class="cart-img">
+                <img src="https://css-assignment.majain.repl.co/Assests/web_dev.jpg" style="width: 500px;"
+                    alt="img not found">
+            </div>
 
-        <div class="cart-img">
-            <img src="https://css-assignment.majain.repl.co/Assests/web_dev.jpg" style="width: 400px;"
-                alt="img not found">
+            <p>Stay at your desired familiar environment and devour upon the technical and organizational aspects of the
+                corporate. Within your domestic vicinity, work & learn from the professionals and apply the gained
+                skills
+                towards the construction of a Learning-based ecosystem.</p>
+
+            <h3>WebDesign Course</h3>
+            <p>All you need is a good-workable effective-reliable internet connectivity, and the determination to work
+                and
+                become a member of the corporate world.</p>
+
+            <div class="main-animate">
+                <div class="animate">
+                   <img src="https://learnyst-user-assets.s3.ap-south-1.amazonaws.com/school-assets/schools/141298/schoolLogo/1661420785619eeeeeeeuuuuuuu-01.png" height="50px" >
+                </div>
+            </div>
         </div>
 
-        <p>Stay at your desired familiar environment and devour upon the technical and organizational aspects of the
-            corporate. Within your domestic vicinity, work & learn from the professionals and apply the gained skills
-            towards the construction of a Learning-based ecosystem.</p>
+        <div class="main-cart">
+            <h1>Website Design</h1>
+            <address>Starting from, May 25, 2023</address>
 
-        <h2>WebDesign Course</h2>
-        <p>All you need is a good-workable effective-reliable internet connectivity, and the determination to work and
-            become a member of the corporate world.</p>
+            <div class="cart-img">
+                <img src="https://css-assignment.majain.repl.co/Assests/webdesign.png" style="width: 400px;"
+                    alt="img not found">
+            </div>
 
-        <div class="animate">
-            <h1>Internship Stdio</h1>
+            <p>Internship training leveraging website designing using HTML, CSS, and JavaScript and BootStrap making you
+                competent to build your own website.
+            </p>
+            <p>HTML and CSS are the core building blocks of the internet and make up what you see online every day. Just
+                knowing syntax alone is not enough, you need to know how to put it all together. Our approach is to
+                train
+                you to think like a web designer. This internship is designed to train you to play with modern web
+                design,
+                keeping a sharp focus on real-world everyday web development skills. Understand how to use CSS in a
+                modern
+                approach, learning which properties are most commonly used and why.
+            </p>
+
+            <h2>Who this Internship is for:</h2>
+            <p>Your internship will be begun on the 25th of may, 2023</p>
+
+            <ul>
+                <li>Anyone who wants to learn about creating websites.</li>
+                <li>Anyone who wants to develop a step by step understanding of HTML, CSS, JavaScript, and about making
+                    a
+                    website.</li>
+                <li>Check the details for your live introductory meeting link in your live introductory curriculum
+                    session
+                </li>
+            </ul>
         </div>
-    </div>
-
-    <div class="main-cart">
-        <h2>Website Design</h2>
-        <address>Starting from, May 25, 2023</address>
-
-        <div class="cart-img">
-            <img src="https://css-assignment.majain.repl.co/Assests/webdesign.png" style="width: 400px;"
-                alt="img not found">
-        </div>
-
-        <p>Internship training leveraging website designing using HTML, CSS, and JavaScript and BootStrap making you
-            competent to build your own website.
-        </p>
-        <p>HTML and CSS are the core building blocks of the internet and make up what you see online every day. Just
-            knowing syntax alone is not enough, you need to know how to put it all together. Our approach is to train
-            you to think like a web designer. This internship is designed to train you to play with modern web design,
-            keeping a sharp focus on real-world everyday web development skills. Understand how to use CSS in a modern
-            approach, learning which properties are most commonly used and why.
-        </p>
-
-        <h2>Who this Internship is for:</h2>
-        <p>Your internship will be begun on the 25th of may, 2023</p>
-
-        <ul>
-            <li>Anyone who wants to learn about creating websites.</li>
-            <li>Anyone who wants to develop a step by step understanding of HTML, CSS, JavaScript, and about making a
-                website.</li>
-            <li>Check the details for your live introductory meeting link in your live introductory curriculum session
-            </li>
-        </ul>
     </div>
 
     <div class="footer">
         <div class="owner">
             <a href="#">
-                <h1>@Rohit Nittawadeakr</h1>
+                <h1>@Rohit Nittawadekar</h1>
             </a>
         </div>
     </div>
